force-app/main/default/objects/location__c/location__c.object-meta.xml
<CustomObject>
    <description>This object holds information about office locations</description>
    <label>location</label>
    <nameField>
        <label>location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>