force-app/main/default/objects/location__c/fields/Location_Map__c.field-meta.xml
<CustomField>
    <fullName>Location_Map__c</fullName>
    <description>shows map url</description>
    <formula>HYPERLINK(&apos;http://&apos; &amp;  Location_Map_URL__c ,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>...............................</inlineHelpText>
    <label>Location Map</label>
    <type>Text</type>
</CustomField>