force-app/main/default/objects/location__c/fields/Location_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Location_Map_URL__c</fullName>
    <label>Location Map URL</label>
    <type>Url</type>
</CustomField>