force-app/main/default/objects/location__c/fields/State_provi__c.field-meta.xml
<CustomField>
    <fullName>State_provi__c</fullName>
    <label>State/province</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>