force-app/main/default/objects/location__c/fields/Street_address__c.field-meta.xml
<CustomField>
    <fullName>Street_address__c</fullName>
    <description>define add of your street</description>
    <label>Street Address</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>